--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="recipe__finder">
-      <div class="recipe__finder-title">
+      <div>
         <h1 class="recipe__title-name">Find a Recipe</h1>
         <p class="recipe__text">Search for a recipe or find a random one!</p>
       </div>
@@ -21,6 +21,29 @@
       </div>
     </div>
       <div class="recipe__container"></div>
+
+    <div class="ingredients__container">
+      <div class="ingredients__list">
+        <button class="ingredients__exit-btn">x</button>
+        <div class="ingredients__details">
+          <h2>Recipe Title</h2>
+          <img src="" alt="Recipe Title"/>
+          <h3></h3>
+          <h3></h3>
+          <h3></h3>
+          <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+          </ul>
+          <h3>Instructions:</h3>
+          <p></p>
+          <div class="ingredients__source">
+            <a href="#" target="_blank">Original Source</a>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <script type="module" src="script.js"></script>
     
