--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css">
+    <script type="module" src="./js-files/classNames.js" defer></script>
+    <script type="module" src="./js-files/exitContainer.js" defer></script>
+    <script type="module" src="./js-files/ingredients.js" defer></script>
+    <script type="module" src="./js-files/randomRecipes.js" defer></script>
+    <script type="module" src="./js-files/script.js" defer></script>
     <title>Random Recipe Finder</title>
   </head>
   <body>
@@ -36,10 +41,6 @@
       </div>
     </div>
 
-    <script type="module" src="./js/script.js"></script>
-    <script type="module" src="./js/classNames.js"></script>
-    <script type="module" src="./js/exitContainer.js"></script>
-    <script type="module" src="./js/ingredients.js"></script>
-    <script type="module" src="./js/randomRecipes.js"></script>
+    
   </body>
 </html>
